# R-Type

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  go_down.cpp
brainstorm/: tcp_protocol
dll/: UnixDLoader.cpp  WinDLoader.cpp  WinDLoader.hh
resources/RFC/: rfc.txt
resources/patterns/: asteroid  default  little  random  sin  space  strong  test
resources/sprites/: 4.cfg  5.cfg  6.cfg  boss.cfg  player.cfg  rock.cfg  vaisseau.cfg
sockets/: Addr.cpp  Addr.hh  IAddr.hh  ITcpSocket.hh  IUdpSocket.hh  Tcp.cpp  Tcp.hh  Udp.cpp  crossplateform_utils.h  test_sockets.cpp
sources/: IThread.hh  UnixDLoader.hh  UnixMutex.cpp  UnixMutex.hh  WinThread.cpp  thread_test.cpp
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/system/: CMakeLists.txt  CMakeLists.txt.tofix
src/libs/system/archiver/: CMakeLists.txt  ResourcesArchiver.cpp  ResourcesArchiver.hh
src/libs/system/dll/: CMakeLists.txt  CMakeLists.txt.tofix  DLoader.hh  DllExportMacros.h  UnixDLoader.cpp  UnixDLoader.hh  WinDLoader.hh
src/libs/system/exploredir/: CMakeLists.txt  ExploreDir.cpp  ExploreDir.hh
src/libs/system/log/: CMakeLists.txt  Config.hh  Log.cpp  Log.hh  Logger.cpp  Logger.hh  example.cpp
src/libs/system/network/: Addr.cpp  Addr.hh  CMakeLists.txt  CMakeLists.txt.tofix  IAddr.hh  ITcpSocket.hh  IUdpSocket.hh  Listener.cpp  Listener.hh  Tcp.cpp  Tcp.hh  Udp.cpp  Udp.hh  UnixTcp.cpp  UnixTcp.hh  UnixUdp.cpp  UnixUdp.hh  socketInit.cpp  socketInit.hh
src/libs/system/threads/: CMakeLists.txt  CMakeLists.txt.tofix  Mutex.hh  Thread.hh  UnixThread.cpp  UnixThread.hh  WinMutex.cpp  WinMutex.hh  thread_test.cpp
src/rtype/: CMakeLists.txt  GameState.cpp  GameState.hh  GraphicGameState.hh  Input.cpp  Input.hh  RTypeConfig.h.in  ServerGameState.cpp  ServerGameState.hh  UnitFactory.cpp  UnitFactory.hh  UnitPool.cpp  UnitPool.hh  client.cpp  client.h  main.cpp  server.cpp  server.h
src/rtype/audio/: CMakeLists.txt  Music.cpp  Music.hh  Sound.cpp  Sound.hh
src/rtype/gamestate/: CMakeLists.txt  GameState.cpp  GameState.hh  GraphicGameState.cpp  GraphicGameState.hh  Pattern.cpp  Pattern.hh  PatternManager.cpp  PatternManager.hh  ServerGameState.cpp  ServerGameState.hh
src/rtype/input/: CMakeLists.txt  Config.cpp  Config.hh  Data.cpp  Data.hh  Manager.cpp  Manager.hh
src/rtype/menu/: Button.cpp  Button.hh  CMakeLists.txt  ListItem.cpp  ListItem.hh  ListView.cpp  ListView.hh  Player.cpp  Player.hh  PlayerListItem.cpp  PlayerListItem.hh  PreGame.cpp  PreGame.hh  Room.cpp  Room.hh  RoomListItem.cpp  RoomListItem.hh  View.cpp  View.hh  main.cpp
src/rtype/network/: CMakeLists.txt  IPackable.hh  NetworkHandler.cpp  NetworkHandler.hh  Packet.cpp  Packet.hh  ReliablePacket.cpp  ReliablePacket.hh
src/rtype/pool/: CMakeLists.txt  GUnitFactory.cpp  GUnitFactory.hh  GUnitPool.cpp  GUnitPool.hh  SUnitFactory.cpp  SUnitFactory.hh  SUnitPool.cpp  SUnitPool.hh  UnitFactory.cpp  UnitFactory.hh  UnitPool.cpp  UnitPool.hh
src/rtype/preroll/: CMakeLists.txt  Client.cpp  Client.hh  INetworkSerializable.hh  Lounge.cpp  Lounge.hh  Room.cpp  Room.hh  server.cpp
src/rtype/sprites/: Animation.cpp  Animation.hh  AnimationInfos.cpp  AnimationInfos.hh  AnimationManager.cpp  AnimationManager.hh  Board.cpp  Board.hh  CMakeLists.txt  SpriteBoard.cpp  SpriteBoard.hh  test_sprite.cpp
src/rtype/units/: AUnit.cpp  AUnit.hh  CMakeLists.txt  IPackable.hh  Missile.cpp  Missile.hh  Monster.cpp  Monster.hh  Packet.cpp  Packet.hh  Player.cpp  Player.hh  Unit.cpp  Unit.hh
src/rtype/units/graphics/: .CMakeLists.txt.swp  CMakeLists.txt  GPlayer.cpp  GPlayer.hh  GUnit.cpp  GUnit.hh
src/rtype/units/shared/: AdvancedMonster.cpp  CMakeLists.txt  DefaultMonster.cpp  DefaultMonster.hh  DumbMonster.cpp  ISharedMonster.hh  RockMonster.cpp  StrongRockMonster.cpp
src/rtype/utilities/: CMakeLists.txt  Vector2D.cpp  Vector2D.hh
src/tests/: CMakeLists.txt  PreGame.cpp  PreGame.hh  client_test.cpp  thread_test.cpp  udp.cpp
threads/: IMutex.hh  IThread.hh  UnixMutex.cpp  UnixMutex.hh  UnixThread.cpp  WinThread.cpp  WinThread.hh  thread_test.cpp
